--- a/ChangeLog
+++ b/ChangeLog
@@ -1,25 +1,35 @@
-* Wednesday, April 24 12:41:41 2002 EDT
-  * initial code complete
+* Wednesday, April 24 12:41:41 2002 EDT, <pabs@pablotron.org>
+  * xmms.c: initial code complete
 
-* Wednesday, April 24 14:36:02 2002 EST
-  * generated RDoc API reference
-  * added constants for maximum and minimum volume and bands, and for the
-    nubmer of bands (MAX_VOL, MIN_VOL, MAX_BAND, MIN_BAND, and NUM_BANDS,
-    respectively)
-  * updated rdoc comments and README for Xmms::Remote#{get,set}_balance
-    quirk
-  * correctly spaced examples so rdoc will format them properly
+* Wednesday, April 24 14:36:02 2002 EST, <pabs@pablotron.org>
+  * xmms.c: generated RDoc API reference
+  * xmms.c: added constants for maximum and minimum volume and bands,
+    and for the nubmer of bands (MAX_VOL, MIN_VOL, MAX_BAND, MIN_BAND,
+    and NUM_BANDS, respectively)
+  * xmms.c: updated rdoc comments and README for
+    Xmms::Remote#{get,set}_balance quirk
+  * xmms.c: correctly spaced examples so rdoc will format them properly
   * regenerated API reference
 
-* Wednesday, April 24 16:09:28 2002 EST
-  * added examples/get_playlist.rb
+* Wednesday, April 24 16:09:28 2002 EST, <pabs@pablotron.org>
+  * xmms.c: added examples/get_playlist.rb
   * released version 0.1.0
 
-* Thursday, April 25 19:45:19 2002 EST
-  * added Xmms::Remote::connect (synonym for Xmms::Remote::new)
-  * added Xmms::Remote::{list,pl} (synonyms for Xmms::Remote::playlist)
-  * band calls throw exception if requested band is out of range
+* Thursday, April 25 19:45:19 2002 EST, <pabs@pablotron.org>
+  * xmms.c: added Xmms::Remote::connect (synonym for Xmms::Remote::new)
+  * xmms.c: added Xmms::Remote::{list,pl} (synonyms for
+    Xmms::Remote::playlist)
+  * xmms.c: band calls throw exception if requested band is out of range
 
-* Sunday, May 05 02:25:43 2002 EST
-  * added band contants previously, but forgot to mention it.
-  * removed $XMMS; egregious namespace violation :)
+* Sunday, May 05 02:25:43 2002 EST, <pabs@pablotron.org>
+  * xmms.c: added band contants previously, but forgot to mention it.
+  * xmms.c: removed $XMMS; egregious namespace violation :)
+
+* Monday, May 13 13:11:16 2002 EST, <pabs@pablotron.org>
+  * xmms.c: applied set_volume fix from Derrick Wood <dwood@cs.utsa.edu>
+  * ChangeLog: modified ChangeLog format (added email address and file)
+  * xmms.c: compiles clean with -pedantic (as clean as it can)
+
+* Thursday, May 23 13:13:50 2002 EST, <pabs@pablotron.org>
+  * doc: updated rdoc documentation
+
